--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,11 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '2.1'
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
